@@ -20,6 +20,7 @@ IF (UNIX)
     IF ( NNFW_CONFIG MATCHES debug )
         ## Debug version
         SET( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -g -O0 " )
+        ADD_DEFINITIONS( "-DNNFW_DEBUG" )
     ELSE ( NNFW_CONFIG MATCHES debug )
         ## Optimized version
         SET( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -O3 -funroll-loops " )
